--- a/brdocgen-app/src/index.css
+++ b/brdocgen-app/src/index.css
@@ -1,22 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   font-family: Arial, sans-serif;
-  position: relative;
-  padding: 20px;
-}
-.title {
-  margin: 0;
-  padding: 0;
-  font-size: 24px;
-}
-.B {
-  color: #009c3b;
-}
-.R {
-  color: #ffdf00;
-}
-.button {
-  background-color: #4caf50;
-  color: white;
-  border: none;
-  cursor: pointer;
 }
